--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,38 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ #promote-sign-up {
+	margin-top: 30px;
+	padding-bottom: 30px;
+	border: 2px solid black;
+}
+#welcome-after-sign-up {
+	margin-top: 30px;
+	padding-bottom: 30px;
+	border: 1px solid black;
+	background-color: #dfdfdf;
+	
+}
+.box {
+	margin-top: 30px;
+}
+#free {
+	width: 100px;
+	height: 100px;
+	margin-right: auto;
+	margin-left: auto;
+	border: 2px solid #286090;
+	border-radius: 5px;
+	background-color: #dfdfdf;
+}
+
+#premium {
+	width: 100px;
+	height: 100px;
+	margin-right: auto;
+	margin-left: auto;
+	border: 2px solid green;
+	border-radius: 5px;
+	background-color: #dfdfdf;
+}
