--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 	<ul class="nav nav-tabs">
 		<li><%= link_to "Home", welcome_index_path %></li>
 		<li><%= link_to "About", welcome_about_path %></li>
+    <li><%= link_to "Wikis", wikis_path %></li>
 		<div class="pull-right user-info">
 			<% if user_signed_in? %>
-				Signed in as: <strong><%= current_user.email %></strong>
+				Signed in as: <strong><%= link_to current_user.user_name, wikis_path, title: "Go to your page." %></strong>
+        -
 				<%= link_to "Edit profile", edit_user_registration_path, class: 'navbar-link' %>
 				-
 				<%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'navbar-link' %>
