--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 			<div class="col-md-2">
 			</div>
 			<div id="welcome-after-sign-up" class="col-md-8 text-center">
-				<h2>Welcome to Blocipedia, <%= current_user.email %></h2>
+				<h2>Welcome to Blocipedia, <%= current_user.user_name %></h2>
 			</div>
 			<div class="col-md-2">
 			</div>
