--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 		<div class="pull-right user-info">
 			<% if user_signed_in? %>
 				Signed in as: <strong><%= link_to current_user.user_name, wikis_path, title: "Go to your page." %></strong>
+        (<%= "#{current_user.role} plan" %>)
         -
 				<%= link_to "Edit profile", edit_user_registration_path, class: 'navbar-link' %>
 				-
