Added private wiki to premium plan

--- a/app/views/wikis/_all_wikis_table.html.erb
+++ b/app/views/wikis/_all_wikis_table.html.erb
@@ -1,5 +1,6 @@
 <table class="table table-bordered table-hover">
   <tr class="bg-info">
+    <th></th>
     <th>wiki title</th>
     <th>created at</th>
     <th></th>
@@ -9,6 +10,7 @@
     <% if current_user %>
       <% unless wiki.user_id == current_user.id %>
         <tr class="active">
+          <td><small><%= wiki.private ? "private" : "public" %></small></td>
           <td><%= link_to wiki.title, wiki_path(wiki.id), title: "Read this wiki." %></td>
           <td><small><%= wiki.created_at.strftime("%B %d, %Y") %></small></td>
           <td><%= content_tag :span, "edit", class: 'text-muted' %></td>
@@ -17,6 +19,7 @@
       <% end %>
     <% else %>
       <tr class="active">
+        <td><small><%= wiki.private ? "private" : "public" %></small></td>
         <td><%= link_to wiki.title, wiki_path(wiki.id), title: "Read this wiki." %></td>
         <td><small><%= wiki.created_at.strftime("%B %d, %Y") %></small></td>
         <td><%= content_tag :span, "edit", class: 'text-muted' %></td>
