--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <%= render partial: 'wikis/my_wikis_table', locals: { wikis: @user.wikis } %>
     </div>
     <div class="col-md-4">
-      <%= render partial: 'wikis/signed_in_or_signup' %>
+      <%= render partial: 'layouts/right_sidebar' %>
     </div>
   </div>
 <% else %>
