--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -25,5 +25,5 @@
       <p class="alert">Attention: You need to be <%= link_to "signed in", new_user_session_path %> to read wikis.</p>
     <% end %>
   </div>
-  <%= render partial: 'signed_in_or_signup' %>
+  <%= render partial: 'layouts/right_sidebar' %>
 </div>
