--- a/app/views/layouts/_right_sidebar.html.erb
+++ b/app/views/layouts/_right_sidebar.html.erb
@@ -5,7 +5,9 @@
     <% if current_user.free? %>
       <%= link_to "Upgrade to Premium Plan", new_charge_path, class: 'btn btn-primary' %>
     <% else %>
-      <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, data: { Confirm: 'Are you sure you want to downgrade to Free Plan?'} %>
+      <% if policy(current_user).is_premium? %>
+        <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, data: { Confirm: 'Are you sure you want to downgrade to Free Plan?'} %>
+      <% end %>
     <% end %>
   </div>
 <% else %>
