--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 	padding-bottom: 30px;
 	border: 1px solid black;
 	background-color: #dfdfdf;
-	
+
 }
 .box {
 	margin-top: 30px;
@@ -49,4 +49,8 @@
 	border: 2px solid green;
 	border-radius: 5px;
 	background-color: #dfdfdf;
+}
+
+th {
+  background-color: #f0f0f0;
 }
