--- a/app/views/layouts/_right_sidebar.html.erb
+++ b/app/views/layouts/_right_sidebar.html.erb
@@ -1,13 +1,15 @@
 <% if user_signed_in? %>
   <div class="col-md-4">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-    <br /><br />
-    <% if current_user.free? %>
-      <%= link_to "Upgrade to Premium Plan", new_subscription_path, class: 'btn btn-primary' %>
+    <% if current_page?(controller: 'wikis', action: 'index') %>
+      <%= link_to "Your Wikis", user_path(current_user), class: 'btn btn-primary' %>
+    <% end %>
+    <% if policy(current_user).is_premium? %>
+      <br /><br />
+      <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, data: { Confirm: 'Are you sure you want to downgrade to Free Plan?'} %>
     <% else %>
-      <% if policy(current_user).is_premium? %>
-        <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, data: { Confirm: 'Are you sure you want to downgrade to Free Plan?'} %>
-      <% end %>
+      <br /><br />
+      <%= link_to "Upgrade to Premium Plan", new_subscription_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% else %>
