--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
         <li>Plan: <%= @user.role %></li>
       </ul>
       <h2>Your wikis</h2>
-      <%= render partial: 'wikis/my_wikis_table', locals: { wikis: @user.wikis } %>
+      <%= render partial: 'wikis/wikis_table', locals: { wikis: @user.wikis } %>
     </div>
     <div class="col-md-4">
       <%= render partial: 'layouts/right_sidebar' %>
