--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,28 +1,7 @@
-<% if user_signed_in? %>
-  <div class="row">
-    <h1>My Wikis list</h1>
-    <div class="col-md-8">
-      <%= render partial: 'my_wikis_table', locals: { wikis: @wikis } %>
-    </div>
-    <div class="col-md-4">
-      <%= render partial: 'layouts/right_sidebar' %>
-    </div>
+<div class="row">
+  <h1>Wikis list</h1>
+  <div class="col-md-8">
+    <%= render partial: 'wikis_table', locals: { wikis: @wikis } %>
   </div>
-  <div class=row>
-    <h1>Other Wikis list</h1>
-    <div class="col-md-8">
-      <%= render partial: 'all_wikis_table', locals: { wikis: @wikis } %>
-    </div>
-    <div class="col-md-4 empty-div">
-      &nbsp;
-    </div>
-  </div>
-<% else %>
-  <div class="row">
-    <h1>Wikis list</h1>
-    <div class="col-md-8">
-      <%= render partial: 'all_wikis_table', locals: { wikis: @wikis } %>
-    </div>
-    <%= render partial: 'layouts/right_sidebar' %>
-  </div>
-<% end %>
+  <%= render partial: 'layouts/right_sidebar' %>
+</div>
