--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,14 +24,16 @@
 	<div class="row">
 		<div class="box">
 			<div class="col-md-6 text-center">
-				<p>Create as many wikis as you want!</p>
 				<p id="free"></p>
-				<p>Free Plan</p>
+				<h2>Free Plan</h2>
+				<p><small>Create as many wikis as you want!</small></p>
+				<p><small>Read other users public wikis</small></p>
 			</div>
 			<div class="col-md-6 text-center">
-				<p>Create private wikis!</p>
 				<p id="premium"></p>
-				<p>Premium Plan</p>
+				<h2>Premium Plan</h2>
+				<p><small>Free plan features</p>
+				<p><small>Create <strong>private</strong> wikis</small></p>
 			</div>
 		</div>
 	</div>
