--- a/app/views/layouts/_right_sidebar.html.erb
+++ b/app/views/layouts/_right_sidebar.html.erb
@@ -1,12 +1,12 @@
 <% if user_signed_in? %>
   <div class="col-md-4">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-    <% if current_page?(controller: 'wikis', action: 'index') %>
+    <% if current_page?(controller: 'wikis', action: 'index') || current_page?(controller: 'wikis', action: 'show') %>
       <%= link_to "Your Wikis", user_path(current_user), class: 'btn btn-primary' %>
     <% end %>
     <% if policy(current_user).is_premium? %>
       <br /><br />
-      <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, data: { Confirm: 'Are you sure you want to downgrade to Free Plan?'} %>
+      <%= link_to "Downgrade to Free Plan", subscription_path(current_user.subscriptions.last.id), class: 'btn btn-danger', method: :delete, title: 'If you downgrade all your wikis will become public.', data: { Confirm: 'Are you sure you want to downgrade to Free Plan? All your private wikis will become public.'} %>
     <% else %>
       <br /><br />
       <%= link_to "Upgrade to Premium Plan", new_subscription_path, class: 'btn btn-primary' %>
