--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -10,8 +10,11 @@
   <p class="author-info">created by <%= @wiki.user.user_name %> at <%= @wiki.created_at.strftime("%B %d, %Y") %></p>
 <% end %>
 
-<% if user_signed_in? && @wiki.user == current_user %>
+<% if user_signed_in? && (@wiki.user == current_user || @wiki_collaborators.include?(current_user.id)) %>
   <%= link_to "Edit Wiki", edit_wiki_path(@wiki.id), class: 'btn btn-primary' %>
+<% end %>
+
+<% if user_signed_in? && @wiki.user == current_user %>
   <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
 <% end %>
 
@@ -19,7 +22,7 @@
   <div class="col-md-8">
     <% if user_signed_in? %>
       <p class="lead">
-        <%= @markdown.render(@wiki.body).html_safe %>
+        <%= markdown_to_html(@wiki.body) %>
       </p>
     <% else %>
       <p class="alert">Attention: You need to be <%= link_to "signed in", new_user_session_path %> to read wikis.</p>
