--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,8 +18,22 @@
       <%= render partial: 'wikis/wikis_table', locals: { wikis: @user.wikis } %>
     </div>
     <div class="col-md-6">
-      <h2>Your Collaborations</h2>
-      <%= render partial: 'wikis/collaborators_table', locals: { collabos: @user.collaborators } %>
+      <h2>Collaborations <small>through wiki_collaborations association</small></h2>
+      <table class="table table-bordered">
+        <th></th>
+        <th>title</th>
+        <th>created at</th>
+        <th>wiki author</th>
+        <% @user.wiki_collaborations.each do |collaboration| %>
+          <tr>
+            <td><small><%= collaboration.private ? "private" : "public" %></small></td>
+            <td><%= link_to collaboration.title, wiki_path(collaboration.id) %></td>
+            <td><small><%= collaboration.created_at.strftime("%B %d, %Y") %></small></td>
+            <td><%= @users.find(collaboration.user_id).user_name %></td>
+            <td><%= link_to "edit", edit_wiki_path(collaboration.id) %></td>
+          </tr>
+        <% end %>
+      </table>
     </div>
   </div>
 <% else %>
