--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,6 +1,9 @@
 <h1>New Wiki</h1>
 <div class"row">
-  <div class="col-md-8">
+  <div class="col-md-6">
     <%= render partial: 'wiki_form', locals: { wiki: @wiki } %>
+  </div>
+  <div class="col-md-6">
+    <div id="wiki_preview"></div>
   </div>
 </div>
