--- a/app/views/wikis/_wiki_form.html.erb
+++ b/app/views/wikis/_wiki_form.html.erb
@@ -15,7 +15,7 @@
   <% end %>
   <%= form_group_tag(wiki.errors[:body]) do %>
     <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', placeholder: "Enter wiki here", rows: "8" %>
+    <%= f.text_area :body, class: 'form-control', onkeyup: 'markdownPreview()', placeholder: "Enter wiki here", rows: "8" %>
   <% end %>
   <% if current_user.premium? %>
     <div class="form-group">
