--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the wikis controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#wiki_preview {
+  height: 100%;
+  border: 1px solid #c0c0c0;
+  background-color: #f0f0f0;
+}
