--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Wiki</h1>
 <div class"row">
-  <div class="col-md-8">
+  <div class="col-md-6">
     <ul>
       <p>Remember:</p>
       <li>Title must have at least 3 and at most 100 characters</li>
@@ -10,6 +10,8 @@
     </ul>
     <%= render partial: 'wiki_form', locals: { wiki: @wiki } %>
   </div>
+  <h3>Preview</h3>
+  <div id="wiki_preview" class="col-md-6"></div>
 </div>
 <% if @wiki.user == current_user %>
   <div class="row">
