--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -3,5 +3,6 @@
   <div class="col-md-6">
     <%= render partial: 'wiki_form', locals: { wiki: @wiki } %>
   </div>
+  <h3>Preview</h3>
   <div id="wiki_preview" class="col-md-6"></div>
 </div>
