Branched heroku first commit

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <br >
 <div class="jumbotron">
 	<h1>Blocipedia: Social, Markdown Wikis</h1>
+	<h2>branched version</h2>
 	<div class="row">
 		<% if user_signed_in? %>
 			<div class="col-md-2">
