Added refactored pundit policies

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,27 +6,21 @@
     <small class="public-wiki">public wiki</small>
   <% end %>
 </h1>
-<% if user_signed_in? %>
-  <p class="author-info">created by <%= @wiki.user.user_name %> at <%= @wiki.created_at.strftime("%B %d, %Y") %></p>
-<% end %>
+<p class="author-info">created by <%= @wiki.user.user_name %> at <%= @wiki.created_at.strftime("%B %d, %Y") %></p>
 
-<% if user_signed_in? && (@wiki.user == current_user || @wiki.users.include?(current_user)) %>
+<% if policy(@wiki).edit? %>
   <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-primary' %>
 <% end %>
 
-<% if user_signed_in? && @wiki.user == current_user %>
+<% if policy(@wiki).destroy? %>
   <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
 <% end %>
 
 <div class="row">
   <div class="col-md-8">
-    <% if user_signed_in? %>
-      <p class="lead">
-        <%= markdown_to_html(@wiki.body) %>
-      </p>
-    <% else %>
-      <p class="alert">Attention: You need to be <%= link_to "signed in", new_user_session_path %> to read wikis.</p>
-    <% end %>
+    <p class="lead">
+      <%= markdown_to_html(@wiki.body) %>
+    </p>
   </div>
   <%= render partial: 'layouts/right_sidebar' %>
 </div>
