--- a/app/views/wikis/_wikis_table.html.erb
+++ b/app/views/wikis/_wikis_table.html.erb
@@ -16,13 +16,13 @@
       <td><%= link_to wiki.title, wiki_path(wiki), title: "Read this wiki." %></td>
       <td><small><%= wiki.created_at.strftime("%B %d, %Y") %></small></td>
       <td>
-        <% if user_signed_in? && wiki.user_id == current_user.id %>
+        <% if policy(wiki).edit? %>
           <%= link_to "edit", edit_wiki_path(wiki), title: "Edit this wiki" %>
         <% else %>
           <%= content_tag :span, "edit", class: 'text-muted' %></td>
         <% end %>
       <td>
-        <% if user_signed_in? && wiki.user_id == current_user.id %>
+        <% if policy(wiki).destroy? %>
           <%= link_to "delete", wiki, method: :delete, title: "Delete this wiki", data: { confirm: 'Are you sure you want to delete this wiki?' } %>
         <% else %>
           <%= content_tag :span, "delete", class: 'text-muted' %></td>
