--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -13,7 +13,7 @@
   <h3>Preview</h3>
   <div id="wiki_preview" class="col-md-6"></div>
 </div>
-<% if @wiki.user == current_user %>
+<% if policy(@wiki).can_add_collaborators? %>
   <div class="row">
     <div class="col-md-8">
       <table class="table table-bordered">
