--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
 <br >
 <div class="jumbotron">
 	<h1>Blocipedia: Social, Markdown Wikis</h1>
-	<h2>branched version</h2>
 	<div class="row">
 		<% if user_signed_in? %>
 			<div class="col-md-2">
@@ -27,8 +26,9 @@
 			<div class="col-md-6 text-center">
 				<p id="free"></p>
 				<h2>Free Plan</h2>
-				<p><small>Create as many wikis as you want!</small></p>
+				<p><small>Create as many public wikis as you want!</small></p>
 				<p><small>Read other users public wikis</small></p>
+				<p></p>
 			</div>
 			<div class="col-md-6 text-center">
 				<p id="premium"></p>
