--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
       <%= render partial: 'wikis/wikis_table', locals: { wikis: @user.wikis } %>
     </div>
     <div class="col-md-6">
-      <h2>Collaborations <small>through wiki_collaborations association</small></h2>
+      <h2>Collaborations</h2>
       <table class="table table-bordered">
         <th></th>
         <th>title</th>
