Changed confirmation instructions and about.html

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<p>Welcome to <a href="https://floating-ocean-14149.herokuapp.com/">Blocipedia</a>.</p>
+
+<p>Hello <%= @resource.user_name %>!</p>
 
 <p>You can confirm your account email through the link below:</p>
 
