--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -8,8 +8,8 @@
         <li>
           Fill the <%= link_to 'sign up form', new_user_registration_path, title: '' %> with a <strong>user name</strong>, <strong>your email address</strong> and a <strong>password</strong>.
         </li>
-        <li>You will receive a confirmation email with a link.</li>
-        <li>Click on the link and you're in!</li>
+        <li>You will receive a confirmation email from <strong>fakeuser049@gmail.com</strong> (the google account we use to send emails for demo projects).</li>
+        <li>Click on the link in the email and you're in!</li>
       </ol>
       <p class="lead">
         <small>
